# opentui-python

./: .coverage  .gitignore  DESIGN.md  PLAN.md  README.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: create-release.yml  quality.yml  release.yml
benchmarks/: bench_layout_pipeline.py  bench_reactivity.py  bench_render_matrix.py  bench_text_render.py  bench_yoga_layout_shapes.py  harness.py  run_all.py
docs/: ARCHITECTURE_DECISIONS.md  OPENCODE_SUBSYSTEMS.md
docs/designs/: 2026-03-05-opentui-python-nanobind-migration.md  2026-03-05-opentui-python-parity.md
docs/plans/: 2026-03-05-opentui-python-parity.md  2026-03-07-opencode-python.md
examples/: counter.py  dashboard.py
scripts/: download_opentui.py  generate_implib.py
src/opencode/: __init__.py  __main__.py  bus.py  config.py
src/opentui/: __init__.py  _signal_types.py  _signals_runtime.py  animation.py  app.py  attachments.py  buffer.py  colors.py  console.py  context.py  detect_links.py  diagnostics.py  edit_buffer.py  edit_buffer_native.py  editor_view_native.py  enums.py  env.py  events.py  expr.py  extmarks.py  ffi.py  filters.py  helpers.py  hooks.py  image.py  image_cache.py  image_loader.py  input.py  key_handler.py  key_maps.py  keymapping.py  layout.py  markdown_parser.py  native.py  palette.py  reconciler.py  renderer.py  resource.py  selection.py  signals.py  (+14 more)
src/opentui_bindings/: CMakeLists.txt  bindings.cpp  border_draw.h  buffer.cpp  common_render.cpp  edit_buffer.cpp  editor_view.cpp  graphics.cpp  hit_grid.cpp  native_signals.cpp  native_signals.h  reconciler_patch.cpp  renderer.cpp  slot_utils.h  text_buffer.cpp  types.cpp  yoga_configure.cpp  yoga_configure.h
src/startui/: __init__.py  actions.py  alert.py  badge.py  breadcrumb.py  button.py  card.py  checkbox.py  command.py  pagination.py  progress.py  props.py  select.py  separator.py  signals.py  switch.py  table.py  tabs.py  textarea.py  theme.py
src/starui_tui/: __init__.py  accordion.py  actions.py  badge.py  breadcrumb.py  button.py  card.py  checkbox.py  command.py  dialog.py  dispatch.py  input.py  pagination.py  props.py  select.py  separator.py  signals.py  switch.py  table.py  tabs.py  textarea.py  theme.py  toast.py  typography.py
tests/: conftest.py  test_attachment_normalization.py  test_buffer.py  test_console.py  test_diagnostics.py  test_edit_buffer.py  test_editor_view.py  test_expr.py  test_ffi.py  test_ffi_behavior.py  test_filters.py  test_graphics.py  test_hooks_registration.py  test_image_api.py  test_image_cache.py  test_image_component.py  test_image_loader.py  test_new_features.py  test_paste_events.py  test_reactive_props.py  test_reconciler.py  test_render_strategy.py  test_scrollbar.py  test_select_component.py  test_signals.py  test_syntax_style.py  test_text_buffer.py  test_text_buffer_view.py  test_text_selection.py  test_text_utils.py  test_timeline.py  test_viewport.py  verify_parity.py
tests/integration/: test_absolute_positioning.py  test_buffer_diff.py  test_destroy_during_render.py  test_error_boundaries.py  test_framebuffer.py  test_hover_cursor.py  test_opacity.py  test_renderable.py  test_renderable_snapshot.py  test_renderer_control.py  test_renderer_destroy_during_render.py  test_renderer_focus.py  test_renderer_focus_restore.py  test_renderer_idle.py  test_renderer_input.py  test_renderer_kitty_flags.py  test_renderer_mouse.py  test_renderer_palette.py  test_renderer_selection.py  test_renderer_use_mouse.py  test_scrollbox.py  test_scrollbox_culling_bug.py  test_scrollbox_hitgrid.py  test_selection_overlay.py  test_terminal_lifecycle.py  test_text_component.py  test_wrap_resize_perf.py  test_yoga_setters.py
tests/lib/: test_backend.py  test_border.py  test_clipboard.py  test_detect_links.py  test_env.py  test_event_loop_resize.py  test_extmarks.py  test_extmarks_multiwidth.py  test_key_handler.py  test_key_handler_integration.py  test_key_handler_stop_propagation.py  test_keymapping.py  test_objects_in_viewport.py  test_palette.py  test_parse_keypress.py  test_parse_keypress_kitty.py  test_parse_mouse.py  test_renderable_validations.py  test_rgba.py  test_selection.py  test_stdin_buffer.py  test_terminal_capability_detection.py  test_terminal_palette.py  test_tree_sitter_client.py  test_tree_sitter_queries.py  test_tree_sitter_styled_text.py  test_yoga_options.py
tests/renderables/: test_base_dirty_paths.py  test_box.py  test_code.py  test_diff.py  test_diff_regression.py  test_input.py  test_line_number.py  test_line_number_scrollbox.py  test_line_number_scrollbox_simple.py  test_line_number_wrapping.py  test_markdown.py  test_markdown_parser.py  test_multi_renderable_selection.py  test_select.py  test_slider.py  test_tab_select.py  test_text.py  test_text_dirty_paths.py  test_text_selection_buffer.py  test_text_table.py  test_textarea_buffer.py  test_textarea_destroyed_events.py  test_textarea_editing.py  test_textarea_error_handling.py  test_textarea_events.py  test_textarea_highlights.py  test_textarea_keybinding.py  test_textarea_paste.py  test_textarea_rendering.py  test_textarea_scroll.py  test_textarea_selection.py  test_textarea_stress.py  test_textarea_undo_redo.py  test_textarea_visual_lines.py  test_textnode.py
tests/solid/: test_box.py  test_context.py  test_control_flow.py  test_cursor_behavior.py  test_diff.py  test_dynamic_collections.py  test_error_boundary.py  test_events.py  test_layout.py  test_lazy_and_switch_direct.py  test_line_number.py  test_line_number_scrollbox.py  test_link.py  test_portal.py  test_scrollbox_cleanchildren.py  test_scrollbox_content.py  test_sticky_scroll.py  test_text_elements.py  test_textarea.py
tests/test_core/: conftest.py  test_attachment_normalization.py  test_box_position.py  test_cleanup.py  test_control_flow.py  test_diff.py  test_error_boundaries.py  test_events.py  test_expr.py  test_ffi.py  test_ffi_behavior.py  test_filters.py  test_graphics.py  test_hooks_registration.py  test_image_api.py  test_image_cache.py  test_image_component.py  test_image_loader.py  test_input_parser.py  test_paste_events.py  (+11 more)
(+316 files in other folders)
