[build-system]
requires = ["scikit-build-core>=0.5", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "opentui"
version = "0.1.0"
description = "Python bindings for OpenTUI - Build terminal UIs with signals"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [
    { name = "OpenTUI Team", email = "hello@opentui.com" }
]
keywords = ["tui", "terminal", "ui", "cli", "opentui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "httpx>=0.28.1",
    "starhtml>=0.5.19",
    "yoga-python==0.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]
images = [
    "Pillow>=10.0.0",
]
numpy = [
    "numpy>=1.24.0",
]
serve = [
    "starlette>=0.27.0",
    "sse-starlette>=1.6.0",
    "uvicorn>=0.23.0",
]
svg = [
    "Pillow>=10.0.0",
    "cairosvg>=2.7.0",
]

[project.scripts]
opentui = "opentui.__main__:main"

[tool.scikit-build]
wheel.packages = ["src/opentui"]
cmake.source-dir = "src/opentui_bindings"
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
